--- a/source/index.html
+++ b/source/index.html
@@ -275,15 +275,27 @@
           </div>
           <ol class="rules__list">
             <li class="rules__item">
+              <div class="rules__bulletBlock">
+                <div class="rules__bullet"></div>
+              </div>
               <p>Тебе отводится <br>5&nbsp;минут</p>
             </li>
             <li class="rules__item">
+              <div class="rules__bulletBlock">
+                <div class="rules__bullet"></div>
+              </div>
               <p>Задавай любые вопросы в&nbsp;текстовом поле</p>
             </li>
             <li class="rules__item">
+              <div class="rules__bulletBlock">
+                <div class="rules__bullet"></div>
+              </div>
               <p>Нажимай кнопку &laquo;Узнать&raquo;, чтобы получить ответ</p>
             </li>
             <li class="rules__item">
+              <div class="rules__bulletBlock">
+                <div class="rules__bullet"></div>
+              </div>
               <p>&laquo;Соня&raquo; может отвечать только&nbsp;Да или Нет</p>
             </li>
           </ol>
